# bonfire-rust

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT.txt  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
examples/: client.rs
src/: builder.rs  connector.rs  error.rs  insecure_connector.rs  lib.rs  prelude.rs  request_kind.rs  result.rs  secure_connector.rs  session.rs
src/client/: builder.rs  error.rs  graphql.rs  jwt.rs  mod.rs  query.rs  request.rs  request_limiter.rs  session.rs  token_provider.rs
src/client/request/: error.rs  mod.rs
src/client/service/: melior.rs  mod.rs  root.rs
src/client/service/fcm/: error.rs  mod.rs
src/connector/: error.rs  insecure.rs  mod.rs  secure.rs
src/connectors/: insecure_connector.rs  mod.rs  secure_connector.rs
src/model/: auth.rs
src/models/: auth.rs  config.rs  fandom.rs  initial_data.rs  mod.rs  other.rs  request.rs  streams.rs
src/models/account/: access_level.rs  badge.rs  ban_entry.rs  blocklist.rs  customization.rs  effect.rs  gender.rs  info.rs  link.rs  mod.rs  prison.rs  profile.rs  stat.rs
src/models/account/effect/: kind.rs  mod.rs  origin.rs  reason_kind.rs
src/models/account/error/: mod.rs  report.rs  set_referrer.rs
src/models/account/requests/: get_account.rs  get_info.rs  get_online.rs  mod.rs  search_accounts.rs
src/models/auth/: error.rs  me.rs  mod.rs
src/models/auth/error/: login_email.rs  logout.rs  mod.rs  refresh.rs
src/models/auth/queries/: login_email.rs  login_refresh.rs  logout.rs  me.rs  mod.rs
src/models/chat/: mod.rs  tag.rs
src/models/chat/kind/: any.rs  direct.rs  fandom_root.rs  fandom_sub.rs  mod.rs
src/models/chat/typing/: command.rs  handler.rs  mod.rs
src/models/common/: category.rs  image.rs  language.rs  mod.rs  voice.rs
src/models/fandom/: mod.rs  status.rs
src/models/notification/: filter.rs
src/models/other/: mod.rs
src/models/other/config/: firebase.rs  mod.rs
src/models/other/fcm/: android_registration.rs  credentials.rs  mod.rs
src/models/profile/: gender.rs  link.rs  mod.rs
src/models/profile/error/: mod.rs  set_image.rs  set_name.rs  set_text.rs
src/models/profile/queries/: mod.rs  set_birthday.rs
src/models/publication/: mod.rs  post.rs  reaction.rs  status.rs
src/models/publication/filter/: account.rs  fandom.rs  mod.rs
src/models/publication/kind/: any.rs  mod.rs  post.rs  post_tag.rs
src/models/raw/: mod.rs  query.rs  request.rs
src/models/raw/account/: badge.rs  info.rs  link.rs  mod.rs
src/models/raw/common/: image.rs  mod.rs
src/models/raw/fandom/: mod.rs
src/models/raw/profile/: mod.rs
src/models/raw/publication/: mod.rs
src/models/settings/: mod.rs  notifications.rs
src/models/settings/feed/: kind.rs  mod.rs
src/models/settings/starter_quest/: mod.rs  stage.rs
src/models/settings/style/: interface_kind.rs  mod.rs
src/queries/: error.rs  mod.rs
src/queries/auth/: get_profile.rs  login_email.rs  logout.rs  me.rs  mod.rs  refresh.rs
src/queries/profile/: mod.rs  set_birthday.rs
src/queries/profile/graphql/: SetBirthdayMutation.graphql
src/queries/raw/: error.rs  mod.rs
src/queries/raw/auth/: error.rs  mod.rs
src/raw/: mod.rs  request.rs
src/raw/account/: badge.rs  effect.rs  info.rs  mod.rs
src/raw/auth/: mod.rs
src/raw/common/: image.rs
src/raw/fandom/: mod.rs
src/raw/profile/: mod.rs
src/raw/publication/: mod.rs  reaction.rs
src/requests/: error.rs  mod.rs
src/requests/account/: get_account.rs  get_info.rs  get_online.rs  get_prison.rs  get_stat.rs  list_banned.rs  list_online.rs  mod.rs  report.rs  search_accounts.rs  set_referrer.rs
src/requests/chat/: get_chat.rs  get_chats.rs  list_chats.rs  mod.rs  notify_typing.rs  typing.rs
src/requests/fandom/: get_fandom.rs  get_fandoms.rs  list_fandoms.rs  mod.rs
src/requests/other/: bootstrap.rs  get_initial_data.rs  mod.rs  save_settings.rs
src/requests/raw/: conversions.rs  error.rs  initial_data.rs  mod.rs
tests/: session.rs
tests/account/: by_id.rs  by_name.rs  get_by_id.rs  main.rs
tests/auth/: login.rs  main.rs
tests/common/: mod.rs
tests/fixtures/account/: expected.ron  get_account.json
tests/fixtures/error/: not_found.json
tests/fixtures/expected/: account.ron  auth.ron
tests/integration_accounts/: by_id.rs  by_name.rs  main.rs
tests/integration_auth/: login.rs  login_email.rs  main.rs
(+136 files in other folders)
